osha.policy Changelog
=====================

1.2.30 (unreleased)
-------------------

- Added conditional patches for p4a.image, so that they don't add their indexes
  (gerken)


1.2.29 (2009-10-18)
-------------------

- enhanced the field default mechanism for 'author' of slc.publicattion to
  handle a special case in the Belgian FOP (thomasw)
- resource centralisation: Only move published items, but tag all items. 
  Fix queries to query in all languages (jcbrand)

1.2.28 (2009-10-11)
-------------------

- adding nace and multilingual_thesaurus to Document & News; actually for 
  the blog, ticket 239 (thomasw)
- using getSite() in the CategoriesVocabulary, because the context passed
  in might not be suited for a PTS transaltion (thomasw)
- ResourceCentralisation:
    - Renamed the log file. Made all methods private, except for the run method
    - Add more directories to ignore
    - Specify the folders that will recieve content rules (jcbrand)
- set property svn:ignore (thomasw)


osha.policy 1.2.27 (2009-10-06)
-------------------------------

- Overriding the Chapter Update functionality in slc.publications (gerken)


osha.policy 1.2.26 (2009-10-06)
-------------------------------
- Add new fields to Links (gerken)
- fixed the naming of multilingual_thesaurus. Had a wrong label (gerken)
- We now store workflow policies. in setup tools. Also there is now
  a new policy for workflows (gerken)

osha.policy 1.2.25 (2009-09-30)
-------------------------------
- bugfix: removed a file that was added wrongly during the structural change
  done in the last revision (gerken)

osha.policy 1.2.24 (2009-09-26)
-------------------------------
- Make osha.policy standalone buildable (gerken)

osha.policy 1.2.23 (2009-09-26)
-------------------------------
- Disable the handle_auto_translated_files subscriber. (jcbrand)
- removed unnecessary import in patches/autotranslate_get_translations.py (deroiste)


osha.policy 1.2.22 (2009-09-10)
-------------------------------