@@ -6,6 +6,7 @@ osha.policy Changelog
 
 - Added conditional patches for p4a.image, so that they don't add their indexes
   (gerken)
+- Custom views for index Subject for slc.clicksearch (thomasw)
 
 
 1.2.29 (2009-10-18)
